--- a/Erven/src/components/header/header.css
+++ b/Erven/src/components/header/header.css
@@ -28,7 +28,7 @@
     list-style: none;
     display: flex;
     flex: 3;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     font-weight: 300;
@@ -41,8 +41,8 @@
 .nav-link a {
     color: rgb(6, 0, 0);
     text-decoration: none;
-    font-size: 18px;
-    padding: 10px 15px;
+    font-size: 22px;
+    padding: 10px 30px;
     transition: background-color 0.3s ease;
     border-radius: 2px;
 }
@@ -63,11 +63,12 @@
 
 .flag {
     height: 26px;
-    width: 36px;
+    width: 39px;
     border-color: #891616;
-    border-radius: 50%; /* Redondea la imagen en un círculo */
+    border-radius: 80%; /* Redondea la imagen en un círculo */
     object-fit: cover;
   }
+
 
 /* Media Queries para pantallas pequeñas */
 @media (max-width: 576px) {
