--- a/Erven/src/index.css
+++ b/Erven/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif ;
   line-height: 1.5;
   font-weight: 400;
 
@@ -11,12 +11,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1280px;
+  text-align: center;
+}
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 
-
 body {
-  margin: 0;
+  
+  text-align: center;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -42,9 +50,42 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:focus,button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+/** Not Found Page **/
+.not-found-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.not-found-title {
+  font-size: 6rem;
+  margin: 0;
+  color: #e74c3c; /* Red color for emphasis */
+}
+
+.not-found-message {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+.not-found-link {
+  font-size: 1.2rem;
+  color: #3498db; /* Blue color for the link */
+  text-decoration: none;
+}
+
+.not-found-link:hover {
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: light) {
