--- a/Erven/src/components/header/header.css
+++ b/Erven/src/components/header/header.css
@@ -48,7 +48,7 @@
 }
 
 .nav-link a:hover {
-    background-color: #2176a8;
+    background-color: rgba(45,119,156,255);
     border-radius: 2px;
 }
 
@@ -63,9 +63,8 @@
 
 .flag {
     height: 26px;
-    width: 39px;
-    border-color: #891616;
-    border-radius: 80%; /* Redondea la imagen en un círculo */
+    width: 37px;
+    border-radius: 100%; /* Redondea la imagen en un círculo */
     object-fit: cover;
   }
 
