--- a/Erven/src/components/Landing/Landing.css
+++ b/Erven/src/components/Landing/Landing.css
@@ -1,53 +1,59 @@
-.banner-container {
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 5px;
-  }
-  
-  .banner-image img {
-    width: 50%;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  
-  .banner-text {
-    background-color: #2d779c;
-    color: white;
-    padding: 20px;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-  }
-  
-  .banner-text p {
-    margin: 0;
-  }
+.banner-container{
+  display: flex;
+  width: 100%;
+  background-color: black;
+  opacity: 1;
+  max-height: 15%;
+  align-items: center; /* Centra los elementos verticalmente */
+  justify-content: center; /* Centra los elementos horizontalmente (opcional) */
+  /* overflow: hidden;  */
+ }
 
+ .banner-container * {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+  position: static;
 
-  /* styles.css */
-.image-container {
-    position: relative;
-    display: inline-block;
-  }
+ }
+
+ section{
+  display: flex;
+  flex-direction: row;
+ }
+
+ h1{
+  color: white;
+ }
+ .inner{
+  max-width: 1200px;
+  margin: auto;
+ }
+
+.first{
+  background-color: violet;
+  width: auto;
+ }
+
+ .second{
+  height: fit-content;
+  background-color: #2d779c;
+ }
+ .second h1{
+  color: red;
+ }
+
+.separator{
+  width: 50%;
+  border-top: 15rem solid blue;
+  border-right: 15vw solid red;
+  max-height: 100%;
+}
+
+.fotoGrupo{
+  max-height: 100%;
+  height: max-content;
+  width: max-content;
   
-  .image-container img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-  
-  .image-container::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-left: 2px solid red; /* Cambia el color y grosor de la línea aquí */
-    transform: rotate(45deg); /* Cambia el ángulo de la línea diagonal */
-    transform-origin: 0 0; /* Ajusta el punto de origen de la rotación */
-    pointer-events: none; /* Evita que la línea bloquee interacciones en la imagen */
-  }
+}
+
