--- a/Erven/src/components/header/header.css
+++ b/Erven/src/components/header/header.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 3rem;
+    padding-top: 3rem;
     padding-bottom: 1rem;
     border-bottom: solid 1px rgb(209, 25, 25);
     color: #000204;
