--- a/Erven/src/index.css
+++ b/Erven/src/index.css
@@ -11,22 +11,22 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1280px;
-  text-align: center;
-}
-
-#root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
 }
 
 
 body {
-  
+  margin: 0;
+  line-height: normal;  
+  margin: 0;
   text-align: center;
   display: flex;
   place-items: center;
+  justify-content: center; 
+  width: 100%;
+  
   min-width: 320px;
   min-height: 100vh;
 }
