--- a/Erven/src/components/Landing/Banner.css
+++ b/Erven/src/components/Landing/Banner.css
@@ -1,35 +1,39 @@
-.trabajandogrupo-1-icon {
+.imagen-grupo {
     position: absolute;
     top: 0px;
-    left: -57px;
-    width: 1340px;
+    width: 100%;
     height: 638px;
     object-fit: cover;
     }
-.component-child {
+
+.caja-derecha{
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    height: 417px;
+}
+.triangulo {
     position: absolute;
     top: 0px;
-    left: 879px;
-    width: 363px;
+    left: 0%;
     height: 487px;
     }
-    .component-item {
+.caja-azul {
     position: absolute;
     top: 0px;
-    left: 1061px;
     background-color: #297b92;
-    width: 859px;
+    width: 100%;
     height: 366px;
     }
-    .component-inner {
+.caja-gris {
     position: absolute;
     top: 299px;
     left: 1283px;
     background-color: #a79a9a;
-    width: 637px;
+    width: 50%;
     height: 118px;
     }
-    .slogan {
+.slogan {
     position: absolute;
     top: 126px;
     left: 1362px;
@@ -39,15 +43,15 @@
     text-shadow: 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000, 0 -1px 0 #000;
     opacity: 0.9;
     }
-    .rectangle-div {
+.rectangle-div {
     position: absolute;
     top: 366px;
     left: 0px;
     background-color: #fff;
-    width: 1283px;
+    /*width: 1283px;*/
     height: 51px;
     }
-    .trabajandogrupo-1-parent {
+.container-banner {
     width: 100%;
     position: relative;
     background-color: #fff;
