--- a/Erven/src/components/Landing/Carrusel.css
+++ b/Erven/src/components/Landing/Carrusel.css
@@ -30,9 +30,9 @@
     display: flex;
     align-items: center;
     position: relative;
-    height: 25vh;
     justify-content: center;
     z-index: 1;
+    margin-top: 10%;
   }
   
   .carousel-container {
