--- a/Erven/src/components/Landing/Landing.css
+++ b/Erven/src/components/Landing/Landing.css
@@ -1,6 +1,80 @@
+.trabajandogrupo-1-icon {
+  position: absolute;
+  top: 0px;
+
+  width: 60%;
+  height: 522px;
+  object-fit: cover;
+  }
+.rectangulo-azul {
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  background-color: #297b92;
+  width: 50%;
+  height: 524px;
+  }
+.slogan {
+  position: absolute;
+  top: 30%;
+  left: 60%;
+  display: inline-block;
+  width: 433px;
+  height: 193px;
+  text-shadow: 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000, 0 -1px 0 #000;
+  opacity: 0.9;
+  }
+.triangulo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  }
+.rectangulo-blanco {
+  position: absolute;
+  top: 362px;
+  background-color: #fff;
+  width: 60%;
+  height: 119px;
+  }
+.rectangulo-gris {
+  position: absolute;
+  top: 326px;
+  left: 60%;
+  background-color: #a79a9a;
+  width: 40%;
+  height: 137px;
+  }
+
+.trabajandogrupo-1-parent {
+  width: 100%;
+  position: relative;
+  top: 20px;
+  margin-top: 5rem;
+  background-color: #fff;
+  height: 411px;
+  overflow: hidden;
+  text-align: left;
+  font-size: 96px;
+  color: #fff;
+  font-family: Inter;
+  }
+
+  
+
+
+
+
+
+
+
+
+
+
+
 .banner-container{
   width: 100vw;
-  height: 25vh;
+  height:411px ;
+  display: flex;
   align-items: center; /* Centra los elementos verticalmente */
   justify-content: center; /* Centra los elementos horizontalmente (opcional) */
   top: 0; /* Stick to the top of the viewport */
@@ -8,13 +82,18 @@
   z-index: 2;
   margin-top: 5rem;
   position: relative;
-  overflow: hidden;
   top: 20px;
-}
 
- .imagen-banner{
-  height: 100%;
+}
+.banner-text{
+  text-align: center;
+  color: black;
+}
+.imagen-banner{
   width: 100%;
-  object-fit: fill;
+  height: 100%;
+  object-fit: cover;
   object-position: center;
  }
+
+ 
