--- a/Erven/src/components/header/header.css
+++ b/Erven/src/components/header/header.css
@@ -9,7 +9,7 @@
     color: #000204;
     background-color: #ffffff;
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 1000;
