--- a/Erven/src/components/Landing/Carrusel.css
+++ b/Erven/src/components/Landing/Carrusel.css
@@ -1,4 +1,4 @@
-
+/* 
   .icono-svc {
     width: 50px;
     height: 50px;
@@ -40,25 +40,27 @@
     justify-content: center;
     width: 100%;
   }
-  
+
   .card {
-    min-width: 200px; /* Ajusta el ancho según sea necesario */
-    height: 300px; /* Ajusta la altura según sea necesario */
+    min-width: 200px; 
+    height: 300px; 
     background: lightblue;
     border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: transform 0.5s ease;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   
   .active {
-    transform: scale(1.2); /* Carta central más grande */
+    transform: scale(1.2); 
   }
   
   .left,
   .right {
-    transform: scale(0.9); /* Cartas laterales más pequeñas */
+    transform: scale(0.9); 
   }
   
   .arrow {
@@ -78,4 +80,18 @@
   
   .right {
     right: 24vw;
-  }
+  } */
+
+.swiper{
+  position: relative;
+  top: 30vh;
+  background-color: pink;
+  height: 300px;
+  width: 600px;
+}
+.card{
+  background-color: green;
+}
+.card2{
+  background-color: aquamarine;
+}
