--- a/Erven/src/components/Landing/Landing.css
+++ b/Erven/src/components/Landing/Landing.css
@@ -1,7 +1,6 @@
 .trabajandogrupo-1-icon {
   position: absolute;
   top: 0px;
-
   width: 60%;
   height: 522px;
   object-fit: cover;
@@ -23,11 +22,13 @@
   height: 193px;
   text-shadow: 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000, 0 -1px 0 #000;
   opacity: 0.9;
+  z-index: 1;
   }
 .triangulo {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 0;
   }
 .rectangulo-blanco {
   position: absolute;
@@ -46,18 +47,19 @@
   }
 
 .trabajandogrupo-1-parent {
+  display: flex;
   width: 100%;
   position: relative;
-  top: 20px;
-  margin-top: 5rem;
+  top: 6.5rem;
   background-color: #fff;
-  height: 411px;
+  height: 420px;
   overflow: hidden;
   text-align: left;
   font-size: 96px;
   color: #fff;
   font-family: Inter;
-  }
+  box-sizing: border-box;
+}
 
   
 
