--- a/Erven/src/components/Footer/Footer.css
+++ b/Erven/src/components/Footer/Footer.css
@@ -1,9 +1,11 @@
-.footer{
-    position: sticky;
-    bottom: 0;
+footer{
+    /* position: sticky; */
+    /* bottom: 0; */
+    /* position: absolute;
+    bottom: 0; */
     display: flex;
     flex-direction: row;
-    margin-top: auto; 
+    /* margin-top: auto;  */
     background-color: #297B92;  
     padding: 1rem;
     text-align: left;
