--- a/Erven/src/components/Landing/Landing.css
+++ b/Erven/src/components/Landing/Landing.css
@@ -50,7 +50,7 @@
   display: flex;
   width: 100%;
   position: relative;
-  top: 6.5rem;
+  margin-top: auto;
   background-color: #fff;
   height: 420px;
   overflow: hidden;
@@ -62,11 +62,86 @@
 }
 
 .container-TODO{
-  margin-top: 6.5rem;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 10rem;
+  padding-top: 6.5rem;
+  position: absolute;
 }
 
+.texto-central{
+  width: 80%;
+  text-align: center;
+  color: #000;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-left: auto;
+  margin-right: auto;
   
+}
+  
+
+
+
+
+footer{
+  /* position: sticky; */
+  /* bottom: 0; */
+  /* position: absolute;
+  bottom: 0; */
+  display: flex;
+  flex-direction: row;
+  /* margin-top: auto;  */
+  background-color: #297B92;  
+  padding: 1rem;
+  text-align: left;
+  align-items: center;
+  width: 100%;  
+  justify-content: space-between;
+  z-index: 1000;
+}
+
+.mi-tabla {
+  width: 100%; /* Ajusta el ancho según sea necesario */
+  border-collapse: separate; /* Elimina el espacio entre celdas */
+}
+
+.column {
+  padding: 10px; /* Espaciado interno para las celdas */
+  vertical-align: top; /* Alinea el contenido en la parte superior */
+  flex: 1;
+  min-width: 200px;
+}
+
+.lista {
+  margin: 0;
+  padding-left: 20vw;
+  text-decoration: none;
+}
+.item a {
+  color: rgb(6, 0, 0);
+  text-decoration: none;
+  font-size: 22px;
+  padding: 10px 30px;
+  transition: background-color 0.3s ease;
+  border-radius: 2px;
+}
+
+.lista2{
+  list-style: none;
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: column; /* Asegura que los iconos estén en una columna */
+  align-items: center; /* Centra los iconos horizontalmente */
+}
+
+.svgs{
+  padding-right: 20vw;
+  padding-top: 10px;
+  max-width: 40px;
+}
 
 
 
