--- a/Erven/src/index.css
+++ b/Erven/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif ;
   line-height: 1.5;
   font-weight: 400;
-  height: 100%;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #ffffff;
@@ -13,6 +12,7 @@
   text-align: center;
   margin: 0;
   padding: 0;
+  overflow-y: auto;
 }
 
 *,
@@ -24,15 +24,16 @@
 
 body {
   margin: 0;
+  margin-bottom: 40px;
   padding: 0;
   line-height: normal;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;  /* Asegura que el body ocupe todo el ancho de la ventana */
+  width: 100vw;  
   height: 100vh;
-  overflow-x: hidden; /* Evita cualquier desbordamiento horizontal */
+  overflow-x: hidden; 
 }
 
 h1 {
