--- a/Erven/src/components/Landing/Carrusel.css
+++ b/Erven/src/components/Landing/Carrusel.css
@@ -1,10 +1,10 @@
 .swiper{
   background-color: pink;
   height: 20vh;
-  width: 80vh;
-  top: 6.5rem !important;
+  width: 80dvw;
+
   padding-top: 10px!important;
-  margin-bottom: 55px!important;
+  /* margin-bottom: 55px!important; */
   align-items: center !important;
 }
 
